--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "morgan": "^1.10.0"
   }
 }
